feat: Introduce local run scripts for Windows and Linux, enhance Dockerfile with OCI labels, health check, and OOM exit.